@@ -2,6 +2,7 @@
 	* version: 2.4.3
 	* BUGFIX: rename `full_sync.collection_exist_no_drop` to
 	`full_sync.collection_exist_drop`.
+	* BUGFIX: fix bug of "two $set" in update query.
 
 2020-04-22 Alibaba Cloud.
 	* version: 2.4.2
